# ai-digital-brain

./: .env.example  .gitignore  DEVELOPMENT_PLAN.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: run_reflection.py  seed_memories.py
src/digital_brain/: __init__.py  config.py  logging_config.py  metrics.py  middleware.py
src/digital_brain/agents/: __init__.py  conversation.py  orchestrator.py  predictive.py  reflection.py
src/digital_brain/api/: app.py  routes.py  webhooks.py
src/digital_brain/channels/: __init__.py  base.py  chunking.py  debounce.py  media.py  pipeline.py  registry.py  security.py
src/digital_brain/memory/: __init__.py  checkpoint_manager.py  importance_scorer.py  local_agent_memory.py  manager.py  reinforcer.py  schemas.py  tools.py
src/digital_brain/mesh/: __init__.py  distributed_mesh.py
src/digital_brain/scheduler/: __init__.py  cron_jobs.py  jobs.py
tests/: conftest.py  test_agents.py  test_channels_base.py  test_channels_chunking.py  test_channels_config.py  test_channels_debounce.py  test_channels_media.py  test_channels_pipeline.py  test_channels_registry.py  test_channels_security.py  test_checkpoint.py  test_config.py  test_context_tool.py  test_importance_scorer.py  test_local_agent_memory.py  test_logging_config.py  test_memory_manager.py  test_memory_tools.py  test_metrics.py  test_middleware.py  test_reinforcer.py  test_routes_validation.py  test_telegram_handlers.py  test_telegram_mapping.py  test_telegram_plugin.py  test_telegram_send.py  test_webhooks.py
(+7 files in other folders)
